# cisp

./: CMakeLists.txt
cmake/: README.md  projectHelpers.cmake
cmake/_template/: README.md  libTemplate.rc.in  sbom-document.in
docs/: CMakeLists.txt  build.md  mainpage.md
packaging/: CMakeLists.txt  README.md  cisp_installer.icns  cpackOptions.cmake.in  preBuildCPack.cmake.in
src/: CMakeLists.txt  README.md
src/base/: CMakeLists.txt  ELevel.h  Event.h  EventQueue.cpp  EventQueue.h  EventQueueTimer.h  EventTarget.cpp  EventTarget.h  EventTypes.h  Fwd.h  IEventQueue.h  IEventQueueBuffer.h  ILogOutputter.h  Log.cpp  Log.h  PriorityQueue.h  SimpleEventQueueBuffer.cpp  SimpleEventQueueBuffer.h  Stopwatch.cpp  Stopwatch.h  String.cpp  String.h  Time.cpp  Time.h  Unicode.cpp  Unicode.h  UniquePtrContainer.h  XBase.cpp  XBase.h  finally.h  log_outputters.cpp  log_outputters.h
src/common/: CMakeLists.txt  common.h  version.h.in
src/core/: CMakeLists.txt  Info.h.in
src/io/: CMakeLists.txt  IStream.h  StreamBuffer.cpp  StreamBuffer.h  StreamFilter.cpp  StreamFilter.h  XIO.cpp  XIO.h  filesystem.cpp  filesystem.h  ioConfig.cmake.in
